# keyboard

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FUTURE_ENHANCEMENTS.md  LICENSE  README.md  SECURITY.md  build.js  docker-compose.yml  gen-icon.js  index.html  package-lock.json  package.json  start-app.bat  start-app.ps1  start-app.sh  tsconfig.json
.claude/: launch.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/tck-core/: Cargo.toml
crates/tck-core/src/: lib.rs
crates/tck-server/: Cargo.toml
crates/tck-server/src/: github.rs  main.rs
crates/tck-ui/: Cargo.toml  Trunk.toml  index.html
crates/tck-ui/assets/: landing.css  style.css
crates/tck-ui/src/: landing.rs  main.rs  orchestrator.rs
deploy/: .env.example  Caddyfile  README.md  tck-server.service
src/: main.ts  preload.ts
src/renderer/: App.tsx  Settings.tsx  Terminal.tsx  globals.d.ts  index.html  index.tsx
