[package]
name = "tck-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "T.C.K (TalentCloud Keyboard) — Dioxus WASM frontend"

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
tck-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gloo-net = { version = "0.6", features = ["http", "websocket"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
futures-util = { version = "0.3", features = ["sink"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Location", "Navigator", "HtmlTextAreaElement", "HtmlInputElement", "Element"] }
